--- a/style.css
+++ b/style.css
@@ -189,10 +189,10 @@ header {
     width: 472px;
     height: 80px;
     gap: 0px;
-    margin-top: -100px;
+    margin-top: -125px;
 
     font-family: 'Inter Tight', sans-serif;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 500;
     line-height: 20px;
     text-align: left;
@@ -1012,7 +1012,7 @@ header {
     height: 128px;
 
     font-family: 'Inter Tight', sans-serif;
-    font-size: 64px;
+    font-size: 62px;
     font-weight: 600;
     line-height: 64px;
     letter-spacing: -0.015em;
@@ -1284,4 +1284,157 @@ header {
 
     background-color: #E0E0E0;
 }
+
+.orders {
+    width: 1280px;
+    height: 977px;
+    gap: 50px;
+
+    margin-top: 700px;
+
+    background-color: #7A3145;
+}
+
+.order-text {
+    width: 751px;
+    height: 193px;
+    gap: 25px;
+
+    padding-top: 50px;
+    margin-left: 100px;
+}
+
+.order-harvest {
+    width: 751px;
+    height: 128px;
+    
+    font-family: 'Inter Tight', sans-serif;
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 64px;
+    letter-spacing: -0.015em;
+    text-align: left;
+    text-transform: uppercase;
+
+    color: #FBFBFB;
+}
+
+.order-harvest span {
+    font-family: 'Inter Tight', sans-serif;
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 64px;
+    letter-spacing: -0.015em;
+    text-align: left;
+
+    opacity: 0.3;
+    color: #FBFBFB;
+}
+
+.order-boxes {
+    width: 742px;
+    height: 40px;
+
+    font-family: 'Inter Tight', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    
+    margin-top: -50px;
+
+    color: #FBFBFB;
+}
+
+.registration {
+    width: 1080px;
+    height: 534px;
+    gap: 24px;
+
+}
+
+.form {
+    width: 529px;
+    height: 524px;
+    gap: 10px;
+    border-radius: 30px;
+
+    margin-top: 100px;
+    margin-left: 100px;
+    background-color: #FBFBFB;
+
+}
+
+.register-form {
+    width: 429px;
+    height: 434px;
+    gap: 50px;
+    margin-left: 50px;
+}
+
+.reg-txt {
+
+    padding-top: 50px;
+    width: 428px;
+    height: 78px;
+
+    font-family: 'Inter Tight', sans-serif;
+    font-size: 22px; /*24*/
+    font-weight: 600;
+    line-height: 26px;
+    letter-spacing: -0.015em;
+    text-align: left;
+    text-transform: uppercase;
+
+    color: #141414;
+}
+
+.us {
+    color: #7A3145;
+}
+
+.the-form {
+    color: #576F35;
+}
+
+
+
+
+.inp-btn {
+    width: 429px;
+    height: 306px;
+    gap: 25px;    
+}
+
+.textfield-name {
+    width: 397px;
+    height: 52px;
+    gap: 10px;
+    border-radius: 30px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border: 1px solid rgba(20, 20, 20, 0.2);
+}
+
+.textfield-name::placeholder {
+
+    width: 67px;
+    height: 20px;
+
+    font-family: 'Inter Tight', sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -0.02em;
+    text-align: center;
+    padding-left: -16px;
+
+    color: #141414;
+}
+
+
+
+#name-txt-f:focus {
+    font-size: 15px;
+} 
 
